force-app/main/default/objects/Charket__WeChatAccount__c/Charket__WeChatAccount__c.object-meta.xml
<CustomObject>
    <label>WeChat Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>