force-app/main/default/objects/Charket__WeChatAccount__c/fields/AesKeySize__c.field-meta.xml
<CustomField>
    <fullName>AesKeySize__c</fullName>
    <defaultValue>256</defaultValue>
    <label>Aes Key Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>