force-app/main/default/objects/Charket__WeChatAccount__c/fields/Charket__AppId__c.field-meta.xml
<CustomField>
    <fullName>Charket__AppId__c</fullName>
    <label>App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>