force-app/main/default/objects/Charket__WeChatAccount__c/fields/Charket__SalesforceEndpoint__c.field-meta.xml
<CustomField>
    <fullName>Charket__SalesforceEndpoint__c</fullName>
    <label>Salesforce Endpoint</label>
    <type>Url</type>
</CustomField>