force-app/main/default/objects/Charket__WeChatAccount__c/fields/Charket__Type__c.field-meta.xml
<CustomField>
    <fullName>Charket__Type__c</fullName>
    <inlineHelpText>Subscribe: 订阅号
Service: 服务号
Provide businesses and Organization a more robust business services and user management capabilities. Mean to help companies quickly implement the new number of public service platform.
Subscription
Provide a new way of in</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscription Account</fullName>
            </value>
            <value>
                <fullName>Service Account</fullName>
                <default>true</default>
                <label>Service Account</label>
            </value>
            <value>
                <fullName>Mini Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>