force-app/main/default/objects/Charket__WeChatAccount__c/fields/Charket__WeChatOriginId__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatOriginId__c</fullName>
    <externalId>true</externalId>
    <label>WeChat Origin ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>