force-app/main/default/objects/Charket__WeChatAccount__c/fields/DataPrivacyPolicy__c.field-meta.xml
<CustomField>
    <fullName>DataPrivacyPolicy__c</fullName>
    <description>Is pulled from a rich text field in the WeChat Account record, privacy policy in the field "Data Privacy Policy" in WeChat Account record. Charket needs CharketCustomDataPrivacyConsent access via Whitelisted Visualforce Pages in Charket settings.</description>
    <label>Data Privacy Policy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>