force-app/main/default/objects/Charket__WeChatAccount__c/fields/OpenIdAesKey__c.field-meta.xml
<CustomField>
    <fullName>OpenIdAesKey__c</fullName>
    <description>This field stores the AES key</description>
    <label>Open ID Aes Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>