force-app/main/default/objects/Charket__WeChatAccount__c/fields/UsedFor__c.field-meta.xml
<CustomField>
    <fullName>UsedFor__c</fullName>
    <label>Used For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>