force-app/main/default/objects/Charket__WeChatAccount__c/listViews/Charket__All.listView-meta.xml
<ListView>
    <fullName>Charket__All</fullName>
    <columns>NAME</columns>
    <columns>Charket__Type__c</columns>
    <columns>Charket__WeChatId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>